--- a/index.html
+++ b/index.html
@@ -11,27 +11,55 @@
     <div id="box" class="header">
         <p style="color:#F9FAF8; font-size: 24px">Header Logo</p>
         <div class="header-links">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Link One</a>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Link Two</a>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Link Three</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Shop</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">FAQ</a>
         </div>
     </div>
     <div id="box" class="hero-container">
-        <div>
-            <p style="color:#F9FAF8; font-size: 48px; font-weight:900">This website is awesome</p>
+        <div class="hero-text">
+            <p style="color:#F9FAF8; font-size: 48px; font-weight:900">An Awesome Website</p>
             <p style="color:#E5E7EB; font-size: 18px">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="register-button">Register Now!</button>
         </div>
         <div class="hero-img">
-
+            image placeholder
         </div>
     </div>
     <div id="box" class="container2">
-        <p style="color:#1F2937; font-size:36px; font-weight:900">Some random information.</p>
+        <p style="color:#1F2937; font-size:36px; font-weight:900; text-align:center">Some random information.</p>
+        <div class="image-container">
+            <div>
+                <div class="image-box"></div>
+                <div class="img-caption">
+                    this is some subtext under an illustration or image
+                </div>              
+            </div>
+            <div>
+                <div class="image-box"></div>
+                <div class="img-caption">
+                    this is some subtext under an illustration or image
+                </div>              
+            </div>
+            <div>
+                <div class="image-box"></div>
+                <div class="img-caption">
+                    this is some subtext under an illustration or image
+                </div>              
+            </div>
+            <div>
+                <div class="image-box"></div>
+                <div class="img-caption">
+                    this is some subtext under an illustration or image
+                </div>              
+            </div>
+        </div>
     </div>
         
         
     <div id="box" class="quote-container">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quoter">-Thor, God of Thunder</p>
     </div>
     <div id="box" class="action-container">
 
