--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="hero-text">
             <p style="color:#F9FAF8; font-size: 48px; font-weight:900">An Awesome Website</p>
             <p style="color:#E5E7EB; font-size: 18px">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button class="register-button">Register Now!</button>
+            <button class="register-button">Register Now</button>
         </div>
         <div class="hero-img">
             image placeholder
         </div>
     </div>
-    <div id="box" class="container2">
-        <p style="color:#1F2937; font-size:36px; font-weight:900; text-align:center">Some random information.</p>
+    <div id="box">
+        <p class="container2-text">Some random information.</p>
         <div class="image-container">
             <div>
                 <div class="image-box"></div>
@@ -58,14 +58,20 @@
         
         
     <div id="box" class="quote-container">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="quoter">-Thor, God of Thunder</p>
+        <p class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="quoter">-Name</p>
     </div>
     <div id="box" class="action-container">
-
+        <div class="action-box">
+            <div class="action-text">
+                <p style="color:#F9FAF8; font-size: 24px">Call to action. It's time!</p>
+                <p style="color:#E5E7EB;font-size:18px">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="action-button">Register Now</button>
+        </div>
     </div>
     <div id="box" class="footer">
-
+        <p style="color:#E5E7EB;font-size:18px">Copyright @ kbousquet 2022</p>
     </div>
 </body>
 </html>
